Editing: Autocorrection in blockquotes causes text to break out of quote https://bugs.webkit.org/show_bug.cgi?id=90487 <rdar://problem/11769020>

Patch by Alice Cheng <alice_cheng@apple.com> on 2012-07-09
Reviewed by Enrica Casucci.

Source/WebCore:

Test: platform/mac/editing/spelling/autocorrection-blockquote-crash.html

SpellingCorrectionCommand uses ReplaceSelectionCommand to replace the misspelled word with the auto-corrected word. Specifically, ReplaceSelectionCommand does a smart copy, where it breaks out of blockquotes. Thus, the fix is to substitute ReplaceSelectionCommand with InserTextCommand.

* editing/SpellingCorrectionCommand.cpp:
(WebCore::SpellingCorrectionCommand::doApply):

LayoutTests:

* platform/mac/editing/spelling/autocorrection-blockquote-crash-expected.txt:
* platform/mac/editing/spelling/autocorrection-blockquote-crash.html:

Canonical link: https://commits.webkit.org/108668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122176 268f45cc-cd09-0410-ab3c-d52691b4dbfc